# photo_engine

./: CMakeLists.txt
include/: Macros.hpp  Singleton.hpp
include/Core/: BasicMain.hpp  BasicRenderer.hpp  BasicWindow.hpp  ThreadManager.hpp
include/Platform/OpenGL/: Main.hpp  Renderer.hpp  Window.hpp
src/: main.cpp
src/Core/: BasicMain.cpp  ThreadManager.cpp
src/Platform/OpenGL/: Main.cpp  Renderer.cpp  Window.cpp
